interface/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: interface
  labels:
    name: interface
spec:
  replicas: 1
  selector:
    matchLabels:
      name: interface
  template:
    metadata:
      labels:
        name: interface
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: server
      containers:
        - name: penpot-interface
          image: docker.io/penpotapp/frontend:2.2.0
          ports:
            - containerPort: 80
              name: default
              protocol: TCP
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 200Mi
          volumeMounts:
            - mountPath: /opt/data/assets
              name: data
