interface/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: interface
spec:
  selector:
    name: interface
  ports:
    - name: default 
      port: 80
      protocol: TCP
      targetPort: 80
