interface/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: interface
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
spec:
  tls:
    - hosts:
        - design.noynto.me
      secretName: interface-tls
  rules:
    - host: design.noynto.me
      http:
        paths:
          - backend:
              service:
                name: interface
                port:
                  number: 80
            pathType: Prefix
            path: /
